# BinaryManager

./: Cargo.toml  README.md
.github/workflows/: validate.yml
src/: lib.rs
